tests/fixtures/invalid/divmod_str_str.py
# Cannot call divmod() with Str, Str
x = divmod("hello", "hello")
